added map in contacts

--- a/index.html
+++ b/index.html
@@ -899,6 +899,15 @@
         <header>
           <h2 class="h2 article-title">Contact</h2>
         </header>
+
+        <section class="mapbox" data-mapbox>
+          <figure>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3722.160175429953!2d78.99777557463169!3d21.106179385116192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4958f06ac1e47%3A0x414e1088addf3414!2sStayWell%20Boys%20Hostel!5e0!3m2!1sen!2sin!4v1698055888309!5m2!1sen!2sin"
+              width="400" height="300" loading="lazy"></iframe>
+          </figure>
+        </section>
+
         <section class="contact-form">
           <h3 class="h3 form-title">Contact Form</h3>
          <form id="feedback-form" class="form" data-form>
